<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btn_write_to_logcat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_logcat"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/btn_show_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_toast"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/et_simple_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/edittext_hint"
        />

    <Button
        android:id="@+id/btn_write_to_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_to_edittext"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn_back_to_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_first_fr_btn"
        android:textSize="30sp"/>

</LinearLayout>