<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment"
    android:background="@android:color/holo_blue_light"
    >



    <Button
        android:id="@+id/btn_2nd_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:textSize="28sp"
        android:text="@string/go_to_second_activity_fragment_btn"
        />

    <Button
        android:id="@+id/btn_3rd_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:textSize="28sp"
        android:text="@string/go_to_third_act_fr_btn"
        />

    <Button
        android:id="@+id/nav_to_sec_activity_from_fragment_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/go_to_act_Act_btn"
        android:textSize="28sp"
        />
</LinearLayout>